# neiro

./: .gitignore  README.md  main.py  pyproject.toml
src/: analysis.py  blinks_analysis.py  fatigue_calc.py  main.py  sound_analysis.py
